# oidc_oauth2_implementation

./: .dockerignore  .env.example  .flake8  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  OIDC_OAuth2_Flows.md  PKCE_README.md  PRESENTATION.md  PROVIDER_IMPLEMENTATIONS.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
documentation/: AZURE_ADMIN_ROLES.md  AZURE_CUSTOM_ROLES_SETUP.md  AZURE_ROLES_TROUBLESHOOTING.md  AZURE_ROLE_IDS_EXPLAINED.md  DOCKER.md  FACTORY_PATTERN_EXPLANATION.md  FASTAPI_IMPLEMENTATION.md  GITHUB_TEAMS_SETUP.md  OAUTH2_OIDC_SETUP_GUIDE.md  OIDC_OAUTH2_FLOWS.md  PKCE_ALTERNATIVE.md
scripts/: docker-setup.sh  init_db.py  lint.sh  pre-commit  run.sh  setup-hooks.sh
src/core/: __init__.py
src/core/auth/: __init__.py  base.py  factory.py  http_client.py  oidc_client.py  oidc_token_validator.py  pkce_store.py  security.py
src/core/cache/: __init__.py  base_cache.py  cache_factory.py  cache_types.py  in_memory_cache.py  memory_cache.py  redis_cache.py
src/core/configuration/: __init__.py  configurations.py  custom_logger.py  logger_dependency.py
src/core/connector/: __init__.py  database_connector.py
src/core/exceptions/: __init__.py  exceptions.py
src/core/models/: __init__.py  database_models.py
src/core/services/: __init__.py  session_service.py
src/core/settings/: __init__.py  app.py
src/fastapi/: __init__.py  api.py  main.py
src/fastapi/models/: __init__.py
src/fastapi/routers/: __init__.py  root.py
(+27 files in other folders)
